--- a/gioHang.html
+++ b/gioHang.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="box-item-cart">
                         <div class="box-item-cart-contain">
-                            <i class="fas fa-shopping-cart"></i> Giỏ hàng <span class="numberItem">0</span>
+                            <i class="fas fa-shopping-cart"></i> Giỏ hàng <span class="numberItem">1</span>
                         </div>
                     </div>
                 </div>
@@ -211,5 +211,82 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+            <div class="top-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="img">
+                                <img src="https://hgeqic7azi.vcdn.com.vn/image/catalog/Footer/service1.png" style="max-width:50px;" alt="GIAO HÀNG SIÊU TỐC">
+                            </div>
+                            <div style="margin-left: 20px;">
+                                <span style="font-size:13px;font-weight:bold;text-transform:uppercase;">GIAO HÀNG SIÊU TỐC</span>
+                                <p style="font-size:13px;">Hệ thống giao hàng tự động chỉ trong 3 phút</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="img">
+                                <img src="https://hgeqic7azi.vcdn.com.vn/image/catalog/Footer/service2.png" style="max-width:50px;" alt="BẢO HÀNH NHANH CHÓNG">
+                            </div>
+                            <div style="margin-left: 20px;">
+                                <span style="font-size:13px;font-weight:bold;text-transform:uppercase;">BẢO HÀNH NHANH CHÓNG</span>
+                                <p style="font-size:13px;">Mọi yêu cầu hỗ trợ sẽ được đội ngũ tư vấn giải quyết trực tiếp.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="img">
+                                <img src="https://hgeqic7azi.vcdn.com.vn/image/catalog/Footer/service3.png" style="max-width:50px;" alt="UY TÍN 5 SAO">
+                            </div>
+                            <div style="margin-left: 20px;">
+                                <span style="font-size:13px;font-weight:bold;text-transform:uppercase;">UY TÍN 5 SAO</span>
+                                <p style="font-size:13px;">Được cộng đồng bình chọn là shop game uy tín nhất VN</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="img">
+                                <img src="https://hgeqic7azi.vcdn.com.vn/image/catalog/Footer/service4.png" style="max-width:50px;" alt="HỖ TRỢ TẬN TÌNH">
+                            </div>
+                            <div style="margin-left: 20px;">
+                                <span style="font-size:13px;font-weight:bold;text-transform:uppercase;">HỖ TRỢ TẬN TÌNH</span>
+                                <p style="font-size:13px;">Hệ thống hỗ trợ online liên tục từ 8h - 24h</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="body-footer container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3>DIVINE SHOP</h3>
+                        <ul>
+                            <li><a href="" target="_blank">Game bản quyền là gì?</a></li>
+                            <li><a href="" target="_blank">Giới thiệu Divine Shop</a></li>
+                            <li><a href="" target="_blank">Điều khoản dịch vụ</a></li>
+                            <li><a href="" target="_blank">Chính sách bảo mật</a></li>
+                            <li><a href="">Donate nhân viên CSKH</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>TÀI KHOẢN</h3>
+                        <ul>
+                            <li><a href="">Giỏ hàng</a></li>
+                            <li><a href="">Đăng kí</a></li>
+                            <li><a href="">Đăng nhập</a></li>
+                            <li><a href="">Sản phẩm đã mua</a></li>
+                            <li><a href="">Chế độ bảo hành</a></li>
+                          </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>LIÊN HỆ</h3>
+                        <ul>
+                            <li><a href="">Địa chỉ giao dịch trực tiếp</a></li>
+                            <li>Hotline: <a href="">1900 633 305</a> - <a href="tel:0964567247">096 4567 247</a> (7:00 - 24:00)</li>
+                            <li>Email: hotro@funnyshop.vn</li>
+                            <li><a href="">Fanpage</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
