--- a/huongDanMuaHang.html
+++ b/huongDanMuaHang.html
@@ -32,7 +32,7 @@ body {
 					<img alt="" src="img/bbb.png">
 				</div>
 				<div class="aaa">
-					<a href="#">Shop Me</a>
+					<a href="#">Funny Shop</a>
 				</div>
 			</div>
 			<div class="center">
@@ -44,14 +44,12 @@ body {
 					<a class="a" href="#">Lý do nên mua game bản quyền</a>
 				</div>
 				<div class="aa">
-					<a class="a" href="#">Giới thiệu Shop Me</a>
+					<a class="a" href="#">Giới thiệu Funny Shop</a>
 				</div>
 				<div class="aa">
 					<a class="a" href="#">Tổng quan Website</a>
 				</div>
-				<div class="aa">
-					<a class="a" href="#">Chính sách VIP</a>
-				</div>
+				
 				<div class="aa">
 					<a class="a" href="#">Diều khoản dịch vụ</a>
 				</div>
@@ -65,7 +63,7 @@ body {
 				<div class="aa">
 					<a class="a" href="#">Hướng dẫn tạo tài khoản</a>
 				</div>
-				<div class="a">
+				<div class="aa">
 					<a class="a" href="#">Hướng dẫn nạp tiền</a>
 				</div>
 				<div class="aa">
@@ -77,9 +75,6 @@ body {
 				<div class="aa"></div>
 
 				<p class="p">Bảo hành</p>
-				<div class="">
-					<a class="a" href="#">Thông tin bảo hành</a>
-				</div>
 				<div class="aa">
 					<a class="a" href="#">Liên hệ và hỗ trợ</a>
 				</div>
@@ -96,7 +91,7 @@ body {
 						<span class="buoc" id="buoc-1">Bước 1:</span>
 					</div>
 					<div class="buoc_sau">
-						<span class="no_bold">Ở giao diện trang chủ Shop Me, click
+						<span class="no_bold">Ở giao diện trang chủ FunnyShop, click
 							vào</span> <span class="bold">Đăng ký</span>
 					</div>
 					<div class="img_1">
@@ -112,11 +107,11 @@ body {
 						<span class="no_bold">Điền đầy đủ các thông được yêu cầu:</span>
 					</div>
 					<div class="img">
-						<img alt="" src="img/Buoc2.png">
+						<img alt="" src="img/Buoc2.png" width="100%">
 					</div>
 
 				</div>
-				<div id="buoc_3" class="center">
+				<!-- <div id="buoc_3" class="center">
 					<div class="buoc">
 						<span class="buoc" id="buoc-3">Bước 3:</span>
 					</div>
@@ -139,7 +134,7 @@ body {
 						<img alt="" src="img/Buoc2.png">
 					</div>
 
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="colum side_2">
@@ -158,9 +153,9 @@ body {
 				<div class="buoc ">
 					<a class="buoc1" href="#buoc-2">Bước 2:</a>
 				</div>
-				<div class="buoc ">
+				<!-- <div class="buoc ">
 					<a class="buoc1" href="#buoc-3">Bước 3:</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
