--- a/list.html
+++ b/list.html
@@ -415,7 +415,7 @@
 			<div class="row">
 				<div class="col-3">
 					<div class="productS">
-						<a href="detail_product.html"><img src="img/img-product/netflix1.png" alt="" width="215" height="100"></a>
+						<a href="netflix.html"><img src="img/img-product/netflix1.png" alt="" width="215" height="100"></a>
 						<p>Tài khoản neflix</p>
 						<p>49,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -552,7 +552,7 @@
 						<h3>DIVINE SHOP</h3>
 						<ul>
 							<li><a href="" target="_blank">Game bản quyền là gì?</a></li>
-							<li><a href="" target="_blank">Giới thiệu Divine Shop</a></li>
+							<li><a href="" target="_blank">Giới thiệu Funny Shop</a></li>
 							<li><a href="" target="_blank">Điều khoản dịch vụ</a></li>
 							<li><a href="" target="_blank">Chính sách bảo mật</a></li>
 							<li><a href="">Donate nhân viên CSKH</a></li>
