--- a/detail_product.html
+++ b/detail_product.html
@@ -540,7 +540,7 @@
                         <h3>DIVINE SHOP</h3>
                         <ul>
                             <li><a href="" target="_blank">Game bản quyền là gì?</a></li>
-                            <li><a href="" target="_blank">Giới thiệu Divine Shop</a></li>
+                            <li><a href="" target="_blank">Giới thiệu Funny Shop</a></li>
                             <li><a href="" target="_blank">Điều khoản dịch vụ</a></li>
                             <li><a href="" target="_blank">Chính sách bảo mật</a></li>
                             <li><a href="">Donate nhân viên CSKH</a></li>
@@ -561,7 +561,7 @@
                         <ul>
                             <li><a href="">Địa chỉ giao dịch trực tiếp</a></li>
                             <li>Hotline: <a href="">1900 633 305</a> - <a href="tel:0964567247">096 4567 247</a> (7:00 - 24:00)</li>
-                            <li>Email: hotro@divineshop.vn</li>
+                            <li>Email: hotro@funnyshop.vn</li>
                             <li><a href="">Fanpage</a></li>
                         </ul>
                     </div>
