--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <li><a href="list.html"><i class="fab fa-hotjar"></i> <span>Mua nhiều trong 24h</span></a></li>
                         <li><a href="list.html"><i class="fas fa-award"></i> <span>NỔI BẬT NHẤT</span></a></li>
                         <li><a href="payments.html"><i class="far fa-credit-card"></i> <span>Hình thức thanh toán</span></a></li>
-                        <li><a href="huongDanMuaHang.html"><i class="far fa-credit-card"></i> <span>Hướng dẫn mua hàng</span></a></li>
+                        <li><a href="huongDanMuaHang.html"><i class="far fa-credit-card"></i> <span>Hướng dẫn</span></a></li>
                     </ul>
                 </div>
                 <div class="box-image-banner">
@@ -636,7 +636,7 @@
                         <h3>DIVINE SHOP</h3>
                         <ul>
                             <li><a href="" target="_blank">Game bản quyền là gì?</a></li>
-                            <li><a href="" target="_blank">Giới thiệu Divine Shop</a></li>
+                            <li><a href="" target="_blank">Giới thiệu Funny Shop</a></li>
                             <li><a href="" target="_blank">Điều khoản dịch vụ</a></li>
                             <li><a href="" target="_blank">Chính sách bảo mật</a></li>
                             <li><a href="">Donate nhân viên CSKH</a></li>
