--- a/steam.html
+++ b/steam.html
@@ -512,7 +512,7 @@
 						<h3>DIVINE SHOP</h3>
 						<ul>
 							<li><a href="" target="_blank">Game bản quyền là gì?</a></li>
-							<li><a href="" target="_blank">Giới thiệu Divine Shop</a></li>
+							<li><a href="" target="_blank">Giới thiệu Funny Shop</a></li>
 							<li><a href="" target="_blank">Điều khoản dịch vụ</a></li>
 							<li><a href="" target="_blank">Chính sách bảo mật</a></li>
 							<li><a href="">Donate nhân viên CSKH</a></li>
