--- a/gioHang.html
+++ b/gioHang.html
@@ -356,9 +356,9 @@
 				<div class="goods-them"></div>
 				<div class="goods-co">
 					<div class="goods-1">
-						<img alt="" src="img/netflix1.png">
-						<div class="goods-2">
-							<a href="#">Gói gia hạn của món hàng là 01 năm</a>
+						<img src="img/netflix1.png">
+						<div class="goods-2" style="margin-right: 100px;">
+							<a href="#">Tài khoản Netflix</a>
 							<div class="thep">
 								<p class="truoc">Tình trạng:</p>
 								<p class="sau">Còn hàng</p>
