--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <ul>
                         <li><a href="steam.html"><i class="fab fa-steam-symbol"></i> <span>Game trên Stream</span></a> </li>
                         <li><a href="list.html"><i class="fas fa-trophy"></i> <span>PUGB</span></a> </li>
-                        <li> <a href="list.html"><i class="fab fa-diaspora"></i> <span>Game trên Origin</span></a> </li>
+                        <li> <a href="battle.html"><i class="fab fa-diaspora"></i> <span>Game trên Origin</span></a> </li>
                         <li><a href="list.html"><i class="fas fa-wallet"></i> <span>Stream Wallet</span></a> </li>
                         <li><a href="list.html"><i class="fas fa-mobile-alt"></i> <span>Nạp game mobile</span></a></li>
                         <li><a href="list.html"><i class="fas fa-broadcast-tower"></i><span>Gói Data Mobile</span></a></li>
@@ -506,7 +506,7 @@
                 </div>
             </div>
             <div class="add-product">
-               <a href="">Tải thêm sản phẩm</a> 
+               <a href="list.html">Tải thêm sản phẩm</a> 
             </div>
         </div>
         <div class="box-search-price border-top-banner container">
