--- a/list.html
+++ b/list.html
@@ -416,7 +416,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="netflix.html"><img src="img/img-product/netflix1.png" alt="" width="215" height="100"></a>
-						<p>Tài khoản neflix</p>
+						<p class="pName">Tài khoản neflix</p>
 						<p>49,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -427,7 +427,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-1.jpg" alt="" width="215" height="100"></a>
-						<p>Among Us</p>
+						<p class="pName">Among Us</p>
 						<p>149,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -438,7 +438,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-3.png" alt="" width="215" height="100"></a>
-						<p>Gói Adobe</p>
+						<p class="pName">Gói Adobe</p>
 						<p>1,149,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -449,7 +449,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-4.png" alt="" width="215" height="100"></a>
-						<p>Nitro</p>
+						<p class="pName">Nitro</p>
 						<p>48,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -460,7 +460,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-5.png" alt="" width="215" height="100"></a>
-						<p>Lummer</p>
+						<p class="pName">Lummer</p>
 						<p>349,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -471,7 +471,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-6.jpeg" alt="" width="215" height="100"></a>
-						<p>Hide My Ass</p>
+						<p class="pName">Hide My Ass</p>
 						<p>549,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -482,7 +482,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-7.png" alt="" width="215" height="100"></a>
-						<p>Genshin Impact</p>
+						<p class="pName">Genshin Impact</p>
 						<p>649,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -493,7 +493,7 @@
 				<div class="col-3">
 					<div class="productS">
 						<a href="detail_product.html"><img src="img/img-product/product-8.png" alt="" width="215" height="100"></a>
-						<p>Tài khoản K+</p>
+						<p class="pName"> Tài khoản K+</p>
 						<p>49,000đ</p>
 						<svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
@@ -502,6 +502,17 @@
 					</div>
 				</div>
 			</div>
+			<br>
+        <div class="container" style="margin-left: 80%;">
+            
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#"><<</a></li>
+                <li class="page-item active"><a class="page-link" href="list.html">1</a></li>
+                <li class="page-item "><a class="page-link" href="list2.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">>></a></li>
+            </ul>
+        </div>
 		</div>
 		<footer>
 			<div class="top-footer">
