--- a/cash.html
+++ b/cash.html
@@ -232,8 +232,9 @@
 			<!--Redirect to this link if fail-->
 			<input type="hidden" name="cancel_return" value="http://localhost/error.html">
 			<!-- Custom button -->
-			<input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-			<img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+			<!-- <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			 --><input type="submit" name="" value="Nạp tiền" class="btn btn-success" >
+			<!-- <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1"> -->
 		</form>
 		
 	</div>
