--- a/gioHang.html
+++ b/gioHang.html
@@ -48,10 +48,11 @@
 
 .phu-ngoai .bottomm .mua {
 	float: right;
+
 }
 
-.phu-ngoai .bottomm .mua>button {
-	height: 30px;
+.phu-ngoai .bottomm .mua a>button {
+	height: 35px;
 	border: 1px solid;
 	border-radius: 4px;
 	background: #21beff;
@@ -415,7 +416,7 @@
 					<a href="index.html"><button>Tiếp tục mua hàng</button></a>
 				</div>
 				<div class="mua">
-					<button>Thanh toán</button>
+					<a href="thanhtoanthanhcong.html"><button>Thanh toán</button></a>
 				</div>
 			</div>
 		</div>
