--- a/historydetail.html
+++ b/historydetail.html
@@ -229,19 +229,19 @@
     <tr>
       <th scope="row">1</th>
       <td>Netflix</td>
-      <td>2HDAS-SKASX-SACCD</td>
+      <td>SAXDS-SKASX-SACCD</td>
       <td>400,000 đ</td>
     </tr>
      <tr>
       <th scope="row">1</th>
       <td>Netflix</td>
-      <td>2HDAS-SKASX-SACCD</td>
+      <td>DCVVF-SKASX-SACCD</td>
       <td>400,000 đ</td>
     </tr>
     <tr>
       <th scope="row">1</th>
-      <td>Netflix</td>
-      <td>2HDAS-SKASX-SACCD</td>
+      <td>Adobe</td>
+      <td>2HDAS-MCJS-SACCD</td>
       <td>400,000 đ</td>
     </tr>
   </tbody>
