--- a/huongDanThemHang.html
+++ b/huongDanThemHang.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Hướng Dẫn Thanh Toán</title>
+<title>Hướng Dẫn Thêm Hàng Vào Giỏ</title>
 <link rel="stylesheet" href="css/stype1.css">
 <link rel="stylesheet" href="css/stype2.css">
 <link rel="stylesheet" href="css/stype3.css">
@@ -84,18 +84,19 @@ body {
 		<div class="colum middle">
 			<div class="contai">
 				<div class="hed">
-					<span>Hướng dẫn tạo tài khoản</span>
+					<span>Hướng Dẫn Thêm Hàng Vào Giỏ</span>
 				</div>
 				<div id="buoc_1" class="center">
 					<div class="buoc">
 						<span class="buoc" id="buoc-1">Bước 1:</span>
 					</div>
 					<div class="buoc_sau">
-						<span class="no_bold">Ở giao diện trang chủ FunnyShop, click
-							vào</span> <span class="bold">Đăng ký</span>
+						<span class="no_bold">Click vào</span> <span class="bold">Thanh tìm kiếm,</span>
+						<span class="no_bold">Search đúng ứng dụng bạn cần, rồi nhấn</span>
+						<span class="bold">Enter</span>
 					</div>
 					<div class="img_1">
-						<img alt="" src="img/Buoc1.png">
+						<img alt="" src="img/bb1.png">
 					</div>
 
 				</div>
@@ -104,37 +105,27 @@ body {
 						<span class="buoc" id="buoc-2">Bước 2:</span>
 					</div>
 					<div class="buoc_sau">
-						<span class="no_bold">Điền đầy đủ các thông được yêu cầu:</span>
+						<span class="no_bold">Click vào </span> <span class="bold"> biểu tượng giỏ hàng</span><span class="no_bold"> để thêm hàng vào giỏ</span>
 					</div>
 					<div class="img">
-						<img alt="" src="img/Buoc2.png" width="100%">
+						<img alt="" src="img/bb2.png" width="100%">
 					</div>
 
 				</div>
-				<!-- <div id="buoc_3" class="center">
+				 <div id="buoc_3" class="center">
 					<div class="buoc">
 						<span class="buoc" id="buoc-3">Bước 3:</span>
 					</div>
 					<div class="buoc_sau">
-						<ul>
-							<li><span class="no_bold"> Tích vào ô <span
-									class="bold">Tôi không phải người máy</span> (có thể hệ thống
-									sẽ yêu cầu click vào các hình ảnh theo yêu cầu, nếu có bạn làm
-									theo yêu cầu đó nhé)<br>
-							</span></li>
-							<li><span class="no_bold"> Tích chọn <span
-									class="bold">Tôi đã đọc và đồng ý với Điều khoản dịch vụ</span><br>
-							</span></li>
-							<li><span class="no_bold"> Cuối cùng là bấm <span
-									class="bold">Đăng Ký</span>
-							</span></li>
-						</ul>
+						<span class="no_bold">Click vào</span>
+						<span class="bold"> Giỏ hàng ở góc trên bên phải màn hình</span>
+
 					</div>
 					<div class="img">
-						<img alt="" src="img/Buoc2.png">
+						<img alt="" src="img/bb3.png" width="100%">
 					</div>
 
-				</div> -->
+				</div>
 			</div>
 		</div>
 		<div class="colum side_2">
@@ -153,9 +144,9 @@ body {
 				<div class="buoc ">
 					<a class="buoc1" href="#buoc-2">Bước 2:</a>
 				</div>
-				<!-- <div class="buoc ">
+				 <div class="buoc ">
 					<a class="buoc1" href="#buoc-3">Bước 3:</a>
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</div>
