--- a/list.html
+++ b/list.html
@@ -15,6 +15,9 @@
 		<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<style type="text/css">
+            body{
+                overflow-x: hidden;
+            }
 			a:hover{
 				text-decoration: none;
 			}
@@ -74,7 +77,7 @@
 			border: 1px solid #D8D8D8;
 			padding: 0;
 			text-align: center;
-			font-weight: bold;
+			/*font-weight: bold;*/
 			
 		}
 		.productS:hover{
