--- a/payments.html
+++ b/payments.html
@@ -362,7 +362,7 @@
                     </div>
                     <div class="title-payment">
                         <h6>Thanh toán bằng thẻ Master/Visa/JCB</h6>
-                        <p>Phí 2.36% + 2.660 đ thông qua MegaPay</p>
+                        <p>Phí 2.36% + 2.660 đ thông qua Paypal</p>
                     </div>
                 </div>
                 <div class="button-payment">
