--- a/profile.html
+++ b/profile.html
@@ -44,6 +44,7 @@
 			font-weight: bold;
 		color: red;
 		display: block;
+
 		}
 		.dropdown-content a:hover {
 			background-color: #f1f1f1
@@ -156,10 +157,10 @@
 				<button class="dropbtn"><b style="font-size: 15px">thanh98thehepro</b></button>
 				<div class="dropdown-content">
 					<p>Số dư : 108,000 đ</p>
-					<a href="#">Thông tin tài khoản</a>
-					<a href="#">Lịch sử đơn hàng</a>
-					<a href="#">Nạp thêm tiền</a>
-					<a href="#">Đổi mật khẩu</a>
+					<a href="profile.html">Thông tin tài khoản</a>
+					<a href="history.html">Lịch sử đơn hàng</a>
+					<a href="cash.html">Nạp thêm tiền</a>
+					<a href="changepassword.html">Đổi mật khẩu</a>
 					<a href="#">Đăng xuất</a>
 				</div>
 			</div>
@@ -213,9 +214,9 @@
 					
 				</div>
 				<div class="col-8">
-					<p><b>Thông tin cá nhân</b></p>
+					<p style="margin-top: 10px;"><b>Thông tin cá nhân</b></p>
 					<hr>
-					<p style="color: red;"><b>Số dư : 100,000 đ</b></p>
+					<p style="color: red;font-weight: bold;font-size: 1.5em"><b>Số dư : 100,000 đ</b></p>
 					<form>
 						<div class="row" style="padding: 0px;">
 							<div class="col-lg-4" >
@@ -237,13 +238,13 @@
 							<div class="col-lg-8" style="margin-bottom: 20px;"> 
 								<input type="text" name="" readonly value="tuanthanh@gmail.com" id="email">
 								<br>
-								<input type="text" name="" >
+								<input type="text" name="" value="Phạm Bùi Tuấn Thành">
+								<br>
+								<input type="text" name="" value="0384203910">
 								<br>
 								<input type="text" name="" >
 								<br>
-								<input type="text" name="" >
-								<br>
-								<input type="text" name="" >
+								<input type="text" name="" value="Thủ đức">
 								<br>
 								<button class="btn-primary" style="margin-left: 10px;">Cập nhật</button>
 
