--- a/huongDanNapTien.html
+++ b/huongDanNapTien.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Hướng Dẫn Thanh Toán</title>
+<title>Hướng Dẫn Nạp Tiền</title>
 <link rel="stylesheet" href="css/stype1.css">
 <link rel="stylesheet" href="css/stype2.css">
 <link rel="stylesheet" href="css/stype3.css">
@@ -84,18 +84,17 @@ body {
 		<div class="colum middle">
 			<div class="contai">
 				<div class="hed">
-					<span>Hướng dẫn tạo tài khoản</span>
+					<span>Hướng dẫn nạp tiền</span>
 				</div>
 				<div id="buoc_1" class="center">
 					<div class="buoc">
 						<span class="buoc" id="buoc-1">Bước 1:</span>
 					</div>
 					<div class="buoc_sau">
-						<span class="no_bold">Ở giao diện trang chủ FunnyShop, click
-							vào</span> <span class="bold">Đăng ký</span>
+						<span class="no_bold">Sau khi đã đăng nhập rê chuột vào tên tài khoản chọn nạp tiền</span>
 					</div>
 					<div class="img_1">
-						<img alt="" src="img/Buoc1.png">
+						<img alt="" src="img/b1.png">
 					</div>
 
 				</div>
@@ -104,37 +103,26 @@ body {
 						<span class="buoc" id="buoc-2">Bước 2:</span>
 					</div>
 					<div class="buoc_sau">
-						<span class="no_bold">Điền đầy đủ các thông được yêu cầu:</span>
+						<span class="no_bold">Nhập số tiền cần nhập</span> 
 					</div>
 					<div class="img">
-						<img alt="" src="img/Buoc2.png" width="100%">
+						<img alt="" src="img/b2.png" width="100%">
 					</div>
 
 				</div>
-				<!-- <div id="buoc_3" class="center">
+				 <div id="buoc_3" class="center">
 					<div class="buoc">
 						<span class="buoc" id="buoc-3">Bước 3:</span>
 					</div>
 					<div class="buoc_sau">
-						<ul>
-							<li><span class="no_bold"> Tích vào ô <span
-									class="bold">Tôi không phải người máy</span> (có thể hệ thống
-									sẽ yêu cầu click vào các hình ảnh theo yêu cầu, nếu có bạn làm
-									theo yêu cầu đó nhé)<br>
-							</span></li>
-							<li><span class="no_bold"> Tích chọn <span
-									class="bold">Tôi đã đọc và đồng ý với Điều khoản dịch vụ</span><br>
-							</span></li>
-							<li><span class="no_bold"> Cuối cùng là bấm <span
-									class="bold">Đăng Ký</span>
-							</span></li>
-						</ul>
+						<span class="no_bold">Chọn <b>Thanh Toán</b> và hoàn thành các bước nhập thông tin</span>
+
 					</div>
 					<div class="img">
-						<img alt="" src="img/Buoc2.png">
+						<img alt="" src="img/b3.png" width="100%">
 					</div>
 
-				</div> -->
+				</div>
 			</div>
 		</div>
 		<div class="colum side_2">
@@ -153,9 +141,9 @@ body {
 				<div class="buoc ">
 					<a class="buoc1" href="#buoc-2">Bước 2:</a>
 				</div>
-				<!-- <div class="buoc ">
+				 <div class="buoc ">
 					<a class="buoc1" href="#buoc-3">Bước 3:</a>
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</div>
