--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                                 <div class="p-5">
                                                     <div class="text-center">
                                                     	<span class="close2">&times;</span>
-                                                        <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                                                        <h1 class="h4 text-gray-900 mb-4">Đăng ký tài khoản</h1>
                                                     </div>
                                                     <form class="user">
                                                         <div class="form-group row">
@@ -264,15 +264,15 @@
                                                                 <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
                                                             </div>
                                                         </div>
-                                                        <a href="login.html" class="btn btn-primary btn-user btn-block">
-                                                            Register Account
+                                                        <a type="submit" class="btn btn-primary btn-user btn-block">
+                                                            Đăng ký
                                                         </a>
                                                         <hr>
                                                         <a href="index.html" class="btn btn-google btn-user btn-block">
-                                                            <i class="fab fa-google fa-fw"></i> Register with Google
+                                                            <i class="fab fa-google fa-fw"></i> Đăng ký với Google
                                                         </a>
                                                         <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                                            <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
+                                                            <i class="fab fa-facebook-f fa-fw"></i> Đăng ký Facebook
                                                         </a>
                                                     </form>
                                                     <hr>
@@ -280,7 +280,7 @@
                                                         <a class="small" href="forgot-password.html">Forgot Password?</a>
                                                     </div>
                                                     <div class="text-center">
-                                                        <a class="small" href="login.html">Already have an account? Login!</a>
+                                                        <a class="small" href="login.html">Đã có tài khoản?</a>
                                                     </div>
                                                 </div>
                                             </div>
