--- a/battle.html
+++ b/battle.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Danh sách</title>
+        <title>Battle</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
