--- a/WebContent/huongDanMuaHang.html
+++ b/WebContent/huongDanMuaHang.html
@@ -32,7 +32,7 @@ body {
 					<img alt="" src="img/bbb.png">
 				</div>
 				<div class="aaa">
-					<a href="#">Funny Shop</a>
+					<a href="index.jsp">Funny Shop</a>
 				</div>
 			</div>
 			<div class="center">
