--- a/WebContent/payments.html
+++ b/WebContent/payments.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <meta charset="UTF-8">
         <title>Divine</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
@@ -145,7 +146,7 @@
             </div>
             <div class="header-menu">
                 <div class="container">
-                    <a href="index.html" style="margin-top: 10px;">
+                    <a href="index.jsp" style="margin-top: 10px;">
                     <div class="logo">
                         <img style="width: 60px;height:auto;object-fit: contain;margin-right: 5px;" src="img/logo/logo_divine_pure_white.png" alt="Logo shop">
                         <img style="width: 100px;height:auto;object-fit: contain;" src="img/logo/logo-1.png" alt="Logo shop">
